compiler/test/conformance/testdata/errors/18_nested_field_uninit.yz
// YZC-0054: multi-level field access — inner field never assigned
Inner: { field String }
Outer: { inner Inner }

main: {
    b : Outer()
    print(b.inner.field)
}
